# ScrappingPdfHtml

./: .editorconfig  .gitignore  Project.code-workspace  README.md  pyproject.toml  requirements.txt  test.html  test.txt
src/: __main__.py
