[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Xavier Méndez <xmmendezy@gmail.com>"]

[tool.poetry.scripts]
main = "src.__main__:main"
requirements = "src.__main__:requirements"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pdfminer = "^20191125"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
